# design-patterns

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/DesignPatterns/Behavioral/ChainOfResponsibility/Bad/: Authenticator.cc  CMakeLists.txt  HttpRequest.cc  Logger.cc  Validator.cc  WebServer.cc
src/DesignPatterns/Behavioral/ChainOfResponsibility/Good/: Authenticator.cc  Handler.cc  Logger.cc  Validator.cc  WebServer.cc
src/DesignPatterns/Behavioral/Command/Bad/: Light.cc  RemoteControl.cc
src/DesignPatterns/Behavioral/Command/Good/: CMakeLists.txt  DimCommand.cc  Light.cc  RemoteControl.cc  TurnOffCommand.cc  TurnOnCommand.cc
src/DesignPatterns/Behavioral/Iterator/Bad/: ShoppingList.cc
src/DesignPatterns/Behavioral/Iterator/Good/: CMakeLists.txt  ShoppingList.cc
src/DesignPatterns/Behavioral/Mediator/Good/: PostsDialogBox.cc
src/DesignPatterns/Behavioral/Mediator/WithObserver/: CMakeLists.txt  PostsDialogBox.cc
src/DesignPatterns/Behavioral/Memento/: CMakeLists.txt
src/DesignPatterns/Behavioral/Memento/Bad/: CMakeLists.txt  Editor.cc
src/DesignPatterns/Behavioral/Memento/Good/: CMakeLists.txt  Editor.cc  EditorState.cc  History.cc
src/DesignPatterns/Behavioral/Observer/Bad/: BarChart.cc  DataSource.cc  Sheet2.cc
src/DesignPatterns/Behavioral/Observer/Good/: BarChart.cc  CMakeLists.txt  DataSource.cc  Sheet2.cc  Subject.cc
src/DesignPatterns/Behavioral/Template/Bad/: Tea.cc  (+1 more)
src/SOLID/I/bad/: CMakeLists.txt
src/SOLID/S/bad/: CMakeLists.txt  User.cc
src/SOLID/S/good/: EmailSender.cc  User.cc  UserService.cc
(+140 files in other folders)
